# CMakeMCUStarter

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  PlatformOptions.cmake  README.md
bsp/stm32l4/: CMakeLists.txt
cmake/: Doxygen.cmake
cmake/toolchain/: arm-none-eabi-gcc.cmake
platform/: CMakeLists.txt  platform.h
platform/host/: CMakeLists.txt
platform/stm32l4/: CMakeLists.txt  stm32l4.ioc
src/: CMakeLists.txt
src/platform/stm32l4/: syscalls.c  syscalls.h
test/: CMakeLists.txt
